# GrafanaRunner

./: .commitlintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  auth_handler.py  browser_setup.py  config.json  config.py  env.example  grafana_runner.py  install.bat  install.sh  package.json  panel_navigator.py  pyproject.toml  requirements.txt  run.bat  run.sh  startup.bat
.github/workflows/: ci.yml  pre-commit.yml  release.yml
tests/: __init__.py  test_auth_handler.py  test_browser_setup.py  test_config.py  test_config_validation.py  test_fullscreen_mode.py  test_grafana_runner.py  test_panel_navigator.py  test_transition_overlay.py  test_utils.py  test_variable_panels.py
